fix node actions overlapping the form

--- a/src/components/editor/styles.css
+++ b/src/components/editor/styles.css
@@ -1,20 +1,21 @@
 .container {
   display: flex;
   flex-direction: column;
-  z-index: 0;
   height: 100vh;
   width: 100vw;
 }
 
 .canvas {
+  z-index: 0;
   position: relative;
   flex-grow: 1;
 }
 
 .form {
+  z-index: 2;
   display: flex;
   justify-content: center;
-  background: rgba(0, 0, 0, .1);
+  background: #eee;
   height: 200px;
 }
 
@@ -26,7 +27,7 @@
 }
 
 .notifications {
-  z-index: 1;
+  z-index: 3;
   position: absolute;
   bottom: 10px;
   left: 10px;
